--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,12 @@ header {
     position: relative;
     z-index: 2; /* Ensure text is above the overlay */
 }
+.hero p {
+    font-size: 26px;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 2; /* Ensure text is above the overlay */
+}
 
 .hero .search-bar {
     position: relative;
