--- a/styles.css
+++ b/styles.css
@@ -201,8 +201,13 @@ header {
     position: relative;
     z-index: 2; /* Ensure text is above the overlay */
 }
-.hero .p {
+.hero p{
     font-size: 26px;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 2; /* Ensure text is above the overlay */
+}
+.hero a{
     margin-bottom: 20px;
     position: relative;
     z-index: 2; /* Ensure text is above the overlay */
